# diff_tasks

./: .travis .yml  .travis.yml  Application_8h.html  Application_8h__dep__incl.map  Application_8h__dep__incl.md5  Application_8h__incl.map  Application_8h__incl.md5  Application_8h_source.html  CMakeLists.txt  Document_8cpp.html  Document_8cpp__incl.map  Document_8cpp__incl.md5  Document_8h.html  Document_8h__dep__incl.map  Document_8h__dep__incl.md5  Document_8h__incl.map  Document_8h__incl.md5  Document_8h_source.html  Drawing_8cpp.html  Drawing_8cpp__incl.map  Drawing_8cpp__incl.md5  Drawing_8h.html  Drawing_8h__dep__incl.map  Drawing_8h__dep__incl.md5  Drawing_8h__incl.map  Drawing_8h__incl.md5  Drawing_8h_source.html  Figures_8cpp.html  Figures_8cpp__incl.map  Figures_8cpp__incl.md5  Figures_8h.html  Figures_8h__dep__incl.map  Figures_8h__dep__incl.md5  Figures_8h__incl.map  Figures_8h__incl.md5  Figures_8h_source.html  GUIForms_8cpp.html  GUIForms_8cpp__incl.map  GUIForms_8cpp__incl.md5  GUIForms_8h.html  (+193 more)
otus_task_1/: CMakeLists.txt  HelloWorld.cpp
otus_task_10/: CMakeLists.txt  HW7.h  Processor.h  Queue.h  main.cpp  tests.cpp  thread_wrapper.h
otus_task_10/tests/: CMakeLists.txt  test_header.h  test_internal_structures.cpp  test_output.cpp  test_output_statistics.cpp  test_principal_task.cpp  test_wrong_input.cpp
otus_task_11/: CMakeLists.txt  HW11.h  Handler.h  Processor.h  async.cpp  async.h
otus_task_11/Tests/: CMakeLists.txt  HW11_test_internal_structures.cpp  HW11_test_output.cpp  HW11_test_principal_task.cpp  test_header.h
otus_task_12/: CMakeLists.txt  Client.cpp  Client.h  H12.h  Processor.h  StartTask.h  main.cpp  thread_wrapper.h
otus_task_12/Tests/: CMakeLists.txt  test_bulk.cpp  test_wrong.cpp
otus_task_2/: MyAlliocator.h  ip_config.cpp  main.cpp
otus_task_3/: .travis.yml  CMakeLists.txt  MList.h  m_list.h  main.cpp  pool_allocator.h  tests.cpp
otus_task_4/: .travis.yml  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Doxyfile  Makefile  cmake_install.cmake  main.cpp  print_ip-0.0.19-Linux.deb  print_ip.h  print_ip_test  tests.cpp  version.h
otus_task_4/Doc/html/: classPRNT_1_1print__ip_3_01T_00_01false_00_01true_01_4.html  classPRNT_1_1print__ip_3_01T_00_01true_00_01false_01_4-members.html  classPRNT_1_1print__ip_3_01std_1_1string_00_01false_00_01true_01_4-members.html  globals_func.html  graph_legend.html  main_8cpp.html  namespacemembers_func.html  structcout__redirect.html  version_8h.html  version_8h_source.html
otus_task_4/Doc/html/search/: all_3.js  typedefs_0.js  variables_0.js
otus_task_4/Doc/latex/: annotated.tex  classPRNT_1_1print__ip.tex  files.tex  main_8cpp.tex  main_8cpp__incl.md5  namespacePRNT.tex  namespaces.tex  print__ip_8h.tex  print__ip_8h__dep__incl.md5  refman.tex  structhelper.tex  tests_8cpp.tex  tests_8cpp__incl.md5  version_8h.tex
otus_task_4/_CPack_Packages/Linux/DEB/: print_ip-0.0.18-Linux.deb
otus_task_4/_CPack_Packages/Linux/DEB/print_ip-0.0.18-Linux/: control
otus_task_4/_CPack_Packages/Linux/DEB/print_ip-0.0.19-Linux/: control  md5sums
otus_task_4/html/: classes.html  globals_defs.html  globals_vars.html  main_8cpp__incl.map  namespaces.html  print__ip_8h__incl.md5  structhelper-members.html  structhelper.html  tests_8cpp.html  tests_8cpp__incl.map  tests_8cpp__incl.md5  version_8h.html  version_8h_source.html
otus_task_4/html/search/: classes_2.js  defines_0.js  functions_4.js
otus_task_4/latex/: classPRNT_1_1print__ip_3_01T_00_01false_00_01true_01_4.tex  classPRNT_1_1print__ip_3_01T_00_01true_00_01false_01_4.tex  classPRNT_1_1print__ip_3_01std_1_1string_00_01false_00_01true_01_4.tex  print__ip_8h__incl.md5  refman.tex  structcout__redirect.tex  version_8h.tex
otus_task_5/: Application.h  CMakeLists.txt  Document.cpp  Document.h  Drawing.cpp  Drawing.h  Figures.cpp  Figures.h  GUI.cpp  GUI.h  GUIForms.cpp  GUIForms.h  GUIImpl.cpp  GUIImpl.h  Menu.cpp  Menu.h  Objects.h  main.cpp  tests.cpp
otus_task_6/: CMakeLists.txt  Matrix.h  main.cpp  tests.cpp  utils.h
otus_task_7/: CMakeLists.txt  HW7.h  main.cpp  tests.cpp
otus_task_7/tests/: CMakeLists.txt  test_header.h  test_internal_structures.cpp  test_output.cpp  test_principal_task.cpp  test_wrong_input.cpp
otus_task_8/: 1196.cpp  1496.cpp  1545.cpp  1837.cpp
search/: all_0.js  all_1.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+16 more)
